--- a/README.html
+++ b/README.html
@@ -84,6 +84,17 @@ img {
 <li><p>Appropriately labels the data set with descriptive variable names.</p></li>
 <li><p>From the data set in step d), creates a second, independent tidy data set with the average of each variable for each activity and each subject.</p></li>
 </ol>
+<pre class="{r}"><code>source(&quot;run_analysis.R&quot;)</code></pre>
+<pre><code>Entire course project can be run by sourcing the R script file 
+with &quot;features.txt&quot;, &quot;activity_labels.txt&quot; in the working directory
+plus subdirectories &quot;train&quot; and &quot;test&quot; containing the following files:
+    train\  y_train.txt,    X_train.txt, and    subject_train.txt
+    test\   y_test.txt,     X_test.txt, and     subject_test.txt
+    
+Above code will generate the following two tidy data files:
+    tidyDataSet.txt
+    tidyDataSetMeansGroupBySubActivities.txt
+    </code></pre>
 
 
 </div>
