readme cleanup for the submission!

--- a/README.html
+++ b/README.html
@@ -68,15 +68,7 @@ img {
 </div>
 
 
-<p>Original Data Source: <a href="http://archive.ics.uci.edu/ml/datasets/Human+Activity+Recognition+Using+Smartphones" class="uri">http://archive.ics.uci.edu/ml/datasets/Human+Activity+Recognition+Using+Smartphones</a></p>
-<p>You will be required to submit:</p>
-<ol start="0" style="list-style-type: decimal">
-<li><p>You should also include a README.md in the repo with your scripts. This repo explains how all of the scripts work and how they are connected.</p></li>
-<li><p>a tidy data set as described below</p></li>
-<li><p>a link to a Github repository with your script for performing the analysis</p></li>
-<li><p>a code book that describes the variables, the data, and any transformations or work that you performed to clean up the data called CodeBook.md.</p></li>
-</ol>
-<p>You should create one R script called run_analysis.R that does the following:</p>
+<p>One R script called run_analysis.R does the following:</p>
 <ol style="list-style-type: lower-alpha">
 <li><p>Merges the training and the test sets to create one data set.</p></li>
 <li><p>Extracts only the measurements on the mean and standard deviation for each measurement.</p></li>
@@ -84,6 +76,44 @@ img {
 <li><p>Appropriately labels the data set with descriptive variable names.</p></li>
 <li><p>From the data set in step d), creates a second, independent tidy data set with the average of each variable for each activity and each subject.</p></li>
 </ol>
+<div id="background-on-the-data-is-as-follows-from-the-data-providers-readme" class="section level1">
+<h1>Background on the data is as follows from the data provider’s readme:</h1>
+<p>The experiments have been carried out with a group of 30 volunteers within an age bracket of 19-48 years. Each person performed six activities (WALKING, WALKING_UPSTAIRS, WALKING_DOWNSTAIRS, SITTING, STANDING, LAYING) wearing a smartphone (Samsung Galaxy S II) on the waist. Using its embedded accelerometer and gyroscope, we captured 3-axial linear acceleration and 3-axial angular velocity at a constant rate of 50Hz. The experiments have been video-recorded to label the data manually. The obtained dataset has been randomly partitioned into two sets, where 70% of the volunteers was selected for generating the training data and 30% the test data.</p>
+<p>The sensor signals (accelerometer and gyroscope) were pre-processed by applying noise filters and then sampled in fixed-width sliding windows of 2.56 sec and 50% overlap (128 readings/window). The sensor acceleration signal, which has gravitational and body motion components, was separated using a Butterworth low-pass filter into body acceleration and gravity. The gravitational force is assumed to have only low frequency components, therefore a filter with 0.3 Hz cutoff frequency was used. From each window, a vector of features was obtained by calculating variables from the time and frequency domain. See ‘features_info.txt’ for more details.</p>
+</div>
+<div id="for-each-record-it-is-provided" class="section level1">
+<h1>For each record it is provided:</h1>
+<ul>
+<li>Triaxial acceleration from the accelerometer (total acceleration) and the estimated body acceleration.</li>
+<li>Triaxial Angular velocity from the gyroscope.</li>
+<li>A 561-feature vector with time and frequency domain variables.</li>
+<li>Its activity label.</li>
+<li>An identifier of the subject who carried out the experiment.</li>
+</ul>
+</div>
+<div id="the-dataset-used-includes-the-following-files" class="section level1">
+<h1>The dataset used includes the following files:</h1>
+<ul>
+<li><p>‘README.txt’</p></li>
+<li><p>‘features_info.txt’: Shows information about the variables used on the feature vector.</p></li>
+<li><p>‘features.txt’: List of all features.</p></li>
+<li><p>‘activity_labels.txt’: Links the class labels with their activity name.</p></li>
+<li><p>‘train/X_train.txt’: Training set.</p></li>
+<li><p>‘train/y_train.txt’: Training labels.</p></li>
+<li><p>‘test/X_test.txt’: Test set.</p></li>
+<li><p>‘test/y_test.txt’: Test labels.</p></li>
+</ul>
+<p>The following files are available for the train and test data. Their descriptions are equivalent.</p>
+<ul>
+<li>‘train/subject_train.txt’: Each row identifies the subject who performed the activity for each window sample. Its range is from 1 to 30.</li>
+</ul>
+</div>
+<div id="notes" class="section level1">
+<h1>Notes:</h1>
+<ul>
+<li>Features are normalized and bounded within [-1,1].</li>
+<li>Each feature vector is a row on the text file.</li>
+</ul>
 <pre class="{r}"><code>source(&quot;run_analysis.R&quot;)</code></pre>
 <pre><code>Entire course project can be run by sourcing the R script file 
 with &quot;features.txt&quot;, &quot;activity_labels.txt&quot; in the working directory
@@ -95,6 +125,15 @@ Above code will generate the following two tidy data files:
     tidyDataSet.txt
     tidyDataSetMeansGroupBySubActivities.txt
     </code></pre>
+<p>==================================================================</p>
+</div>
+<div id="license" class="section level1">
+<h1>License:</h1>
+<p>Use of this dataset in publications must be acknowledged by referencing the following publication [1]</p>
+<p>[1] Davide Anguita, Alessandro Ghio, Luca Oneto, Xavier Parra and Jorge L. Reyes-Ortiz. Human Activity Recognition on Smartphones using a Multiclass Hardware-Friendly Support Vector Machine. International Workshop of Ambient Assisted Living (IWAAL 2012). Vitoria-Gasteiz, Spain. Dec 2012</p>
+<p>This dataset is distributed AS-IS and no responsibility implied or explicit can be addressed to the authors or their institutions for its use or misuse. Any commercial use is prohibited.</p>
+<p>Jorge L. Reyes-Ortiz, Alessandro Ghio, Luca Oneto, Davide Anguita. November 2012.</p>
+</div>
 
 
 </div>
